<resources>
    <string name="app_name">My WakeUp MSG</string>
    <string name="action_settings">Settings</string>

    <string name="from">C</string>
    <string name="to">До</string>


    <string name="start_btn">START</string>
    <string name="save_btn">SAVE</string>
    <string name="stop_btn">STOP</string>
    <string name="edit_btn">EDIT</string>


    <string name="weekday_mon">Пн</string>
    <string name="weekday_tue">Вт</string>
    <string name="weekday_wed">Ср</string>
    <string name="weekday_thu">Чт</string>
    <string name="weekday_fri">Пт</string>
    <string name="weekday_sat">Сб</string>
    <string name="weekday_sun">Вс</string>
    <string name="weekday_none"> </string>



    <string name="preference_file_key">MWUM Preferences</string>

    <string name="time_wake_start_key">WSTART</string>
    <string name="time_wake_end_key">WEND</string>
    <string name="msg_text_key">MSGTXT</string>

    <string name="log_text_key">LOGTXT</string>

    <string name="mode_key">MODE</string>

    <string name="msg_text_mon_key">MSGTXT_MON</string>
    <string name="msg_text_tue_key">MSGTXT_TUE</string>
    <string name="msg_text_wed_key">MSGTXT_WED</string>
    <string name="msg_text_thu_key">MSGTXT_THU</string>
    <string name="msg_text_fri_key">MSGTXT_FRI</string>
    <string name="msg_text_sat_key">MSGTXT_SAT</string>
    <string name="msg_text_sun_key">MSGTXT_SUN</string>

</resources>
